force-app/main/default/objects/CC_Derecho__c/CC_Derecho__c.object-meta.xml
<CustomObject>
    <label>Derecho</label>
    <nameField>
        <displayFormat>DER-{0000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Derechos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>