force-app/main/default/objects/CC_Derecho__c/fields/CC_Apellido2__c.field-meta.xml
<CustomField>
    <fullName>CC_Apellido2__c</fullName>
    <description>Segundo apellido del cliente solicitante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apellido 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>