force-app/main/default/objects/CC_Derecho__c/fields/CC_Bloque__c.field-meta.xml
<CustomField>
    <fullName>CC_Bloque__c</fullName>
    <description>Bloque de la dirección de envío del cliente solicitante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Bloque</label>
    <length>18</length>
    <type>Text</type>
</CustomField>