force-app/main/default/objects/CC_Derecho__c/fields/CC_Caso__c.field-meta.xml
<CustomField>
    <fullName>CC_Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso desde el que se ha solicitado el derecho.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Derechos</relationshipLabel>
    <relationshipName>Derechos</relationshipName>
    <type>Lookup</type>
</CustomField>