force-app/main/default/objects/CC_Derecho__c/fields/CC_CodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>CC_CodigoPostal__c</fullName>
    <description>Código postal de la dirección de envío del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>