force-app/main/default/objects/CC_Derecho__c/fields/CC_DatosClienteVerificados__c.field-meta.xml
<CustomField>
    <fullName>CC_DatosClienteVerificados__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmación de que el agente ha verificado los datos personales del cliente.</description>
    <label>Se han verificado los datos del cliente</label>
    <type>Checkbox</type>
</CustomField>