force-app/main/default/objects/CC_Derecho__c/fields/CC_DocumentoCliente__c.field-meta.xml
<CustomField>
    <fullName>CC_DocumentoCliente__c</fullName>
    <description>Número de documento del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Documento del cliente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>