force-app/main/default/objects/CC_Derecho__c/fields/CC_Edificio__c.field-meta.xml
<CustomField>
    <fullName>CC_Edificio__c</fullName>
    <description>Edificio de la dirección de envío del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Edificio</label>
    <length>15</length>
    <type>Text</type>
</CustomField>