force-app/main/default/objects/CC_Derecho__c/fields/CC_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CC_Empresa__c</fullName>
    <description>Empresa por la que se solicita el derecho.</description>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASOCIACIÓN DE VOLUNTARIOS DE CAIXABANK</fullName>
            </value>
            <value>
                <fullName>BANKIA HABITAT, S.L.</fullName>
            </value>
            <value>
                <fullName>BUILDINGCENTER, S.A.U.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK ASSET MANAGEMENT</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK ASSET MANAGEMENT</label>
            </value>
            <value>
                <fullName>CAIXABANK ASSET MANAGEMENTCAIXABANK EQUIPMENT FINANCE, S.A.U.</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK ASSET MANAGEMENTCAIXABANK EQUIPMENT FINANCE, S.A.U.</label>
            </value>
            <value>
                <fullName>CAIXABANK ASSET MANAGEMENT SGIIC S.A.U.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK BUSINESS INTELLIGENCE</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK BUSINESS INTELLIGENCE</label>
            </value>
            <value>
                <fullName>CAIXABANK BUSINESS INTELLIGENCE S.A.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK DIGITAL BUSINESS</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK DIGITAL BUSINESS</label>
            </value>
            <value>
                <fullName>CAIXABANK ELECTRONIC MONEY EDE, S.L.</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK ELECTRONIC MONEY EDE, S.L.</label>
            </value>
            <value>
                <fullName>CAIXABANK EQUIPMENT FINANCE S.A.U.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK FACILITIES MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>CAIXABANK NOTAS MINORISTAS</fullName>
            </value>
            <value>
                <fullName>CAIXABANK OPERATIONAL SERVICES S.A.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK PAYMENTS &amp; CONSUMER</fullName>
            </value>
            <value>
                <fullName>CAIXABANK S.A.</fullName>
                <default>true</default>
                <label>CAIXABANK S.A.</label>
            </value>
            <value>
                <fullName>CAIXABANK TECH S.L.</fullName>
            </value>
            <value>
                <fullName>CAIXABANK TITULIZACIÓN</fullName>
                <isActive>false</isActive>
                <label>CAIXABANK TITULIZACIÓN</label>
            </value>
            <value>
                <fullName>CAIXABANK TITULIZACION S.G.F.T. S.A.U.</fullName>
            </value>
            <value>
                <fullName>CAJA SAN FERNANDO FINANCE, S.A.U.</fullName>
                <isActive>false</isActive>
                <label>CAJA SAN FERNANDO FINANCE, S.A.U.</label>
            </value>
            <value>
                <fullName>CENTRO DE SERVICIOS OPERATIVOS E INGENIERÍA DE PROCESOS, S.L.U</fullName>
                <isActive>false</isActive>
                <label>CENTRO DE SERVICIOS OPERATIVOS E INGENIERÍA DE PROCESOS, S.L.U</label>
            </value>
            <value>
                <fullName>CENTRO DE SERVICIOS OPERATIVOS E INGENIERÍA DE PROCESOS, S.L.U.</fullName>
            </value>
            <value>
                <fullName>COMERCIA GLOBAL PAYMENTS</fullName>
                <isActive>false</isActive>
                <label>COMERCIA GLOBAL PAYMENTS</label>
            </value>
            <value>
                <fullName>COMERCIA GLOBAL PAYMENTS, ENTIDAD DE PAGO S.L.</fullName>
            </value>
            <value>
                <fullName>CORPORACIÓN HIPOTECARIAL MUTUAL, S.A., E.F.C</fullName>
                <isActive>false</isActive>
                <label>CORPORACIÓN HIPOTECARIAL MUTUAL, S.A., E.F.C</label>
            </value>
            <value>
                <fullName>CORPORACION HIPOTECARIA MUTUAL, S.A.U., ESTABLECIMIENTO FINANCIERO DE CREDITO</fullName>
            </value>
            <value>
                <fullName>CREDIFIMO, S.A.</fullName>
                <isActive>false</isActive>
                <label>CREDIFIMO, S.A.</label>
            </value>
            <value>
                <fullName>GDS CUSA</fullName>
                <isActive>false</isActive>
                <label>GDS CUSA</label>
            </value>
            <value>
                <fullName>GEROCAIXA ENTIDAD DE PREVISION SOCIAL VOLUNTARIA INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>GEROCAIXA EPSV INDIVIDUAL</fullName>
                <isActive>false</isActive>
                <label>GEROCAIXA EPSV INDIVIDUAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>