force-app/main/default/objects/CC_Derecho__c/fields/CC_Estado__c.field-meta.xml
<CustomField>
    <fullName>CC_Estado__c</fullName>
    <description>Situación en la que se encuentra el derecho.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente envío</fullName>
                <default>true</default>
                <label>Pendiente envío</label>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Erróneo</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>