force-app/main/default/objects/CC_Derecho__c/fields/CC_FechaEnvioCierre__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaEnvioCierre__c</fullName>
    <description>Fecha en la que el agente da por cerrado el caso o envía el derecho a GDPR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de envío/cierre</label>
    <type>DateTime</type>
</CustomField>