force-app/main/default/objects/CC_Derecho__c/fields/CC_IdentificadorPortabilidad__c.field-meta.xml
<CustomField>
    <fullName>CC_IdentificadorPortabilidad__c</fullName>
    <description>Propiedad del derecho de Portabilidad.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador de portabilidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>