force-app/main/default/objects/CC_Derecho__c/fields/CC_IdentificadorSolicitud__c.field-meta.xml
<CustomField>
    <fullName>CC_IdentificadorSolicitud__c</fullName>
    <description>Número de caso de la aplicación GDPR.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador de solicitud</label>
    <length>18</length>
    <type>Text</type>
</CustomField>