force-app/main/default/objects/CC_Derecho__c/fields/CC_Localidad__c.field-meta.xml
<CustomField>
    <fullName>CC_Localidad__c</fullName>
    <description>Localidad de la dirección de envío del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Localidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>