force-app/main/default/objects/CC_Derecho__c/fields/CC_Nombre__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre__c</fullName>
    <description>Nombre de pila del cliente solicitante.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>