force-app/main/default/objects/CC_Derecho__c/fields/CC_NombreVia__c.field-meta.xml
<CustomField>
    <fullName>CC_NombreVia__c</fullName>
    <description>Nombre de la vía de la dirección de envío del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre de vía</label>
    <length>50</length>
    <type>Text</type>
</CustomField>