force-app/main/default/objects/CC_Derecho__c/fields/CC_NumeroVia__c.field-meta.xml
<CustomField>
    <fullName>CC_NumeroVia__c</fullName>
    <description>Número de vía de la dirección de envío del cliente.</description>
    <label>Número de vía</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>