force-app/main/default/objects/CC_Derecho__c/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>NumPerso del cliente solicitante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>