force-app/main/default/objects/CC_Derecho__c/fields/CC_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Oficina__c</fullName>
    <description>Oficina desde la que se solicita el derecho.</description>
    <label>Oficina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATENCIÓN AL CLIENTE</fullName>
                <default>true</default>
                <label>ATENCIÓN AL CLIENTE</label>
            </value>
            <value>
                <fullName>CENTRO DE SOPORTE A BANCA DIGITAL</fullName>
            </value>
            <value>
                <fullName>CAIXABANK DIGITAL BUSINESS</fullName>
            </value>
            <value>
                <fullName>CAIXABANK BUSINESS INTELLIGENCE</fullName>
            </value>
            <value>
                <fullName>SERVICIO DE ATENCIÓN AL CLIENTE HIPOTECARIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>