force-app/main/default/objects/CC_Derecho__c/fields/CC_Pais__c.field-meta.xml
<CustomField>
    <fullName>CC_Pais__c</fullName>
    <description>País de la dirección de envío del cliente.</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESPAÑA</fullName>
                <default>true</default>
                <label>ESPAÑA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>