force-app/main/default/objects/CC_Derecho__c/fields/CC_Provincia__c.field-meta.xml
<CustomField>
    <fullName>CC_Provincia__c</fullName>
    <description>Provincia de la dirección de envío del cliente.</description>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Provincia</valueSetName>
    </valueSet>
</CustomField>