force-app/main/default/objects/CC_Derecho__c/fields/CC_Resto__c.field-meta.xml
<CustomField>
    <fullName>CC_Resto__c</fullName>
    <description>Otros datos de la dirección de envío del cliente.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resto</label>
    <length>150</length>
    <type>Text</type>
</CustomField>