force-app/main/default/objects/CC_Derecho__c/fields/CC_Telemarketing__c.field-meta.xml
<CustomField>
    <fullName>CC_Telemarketing__c</fullName>
    <description>Propiedad del derecho de Revocación del consentimiento</description>
    <inlineHelpText>Participar en campañas promocionales y ofertas comerciales del grupo CaixaBank mediante el canal Telemarketing.</inlineHelpText>
    <label>Telemarketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacío</fullName>
                <default>true</default>
                <label>Vacío</label>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>