force-app/main/default/objects/CC_Derecho__c/fields/CC_TextoOposicion__c.field-meta.xml
<CustomField>
    <fullName>CC_TextoOposicion__c</fullName>
    <description>Propiedad del derecho de Oposición.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>