force-app/main/default/objects/CC_Derecho__c/fields/CC_TextoRectificacion__c.field-meta.xml
<CustomField>
    <fullName>CC_TextoRectificacion__c</fullName>
    <description>Propiedad del derecho de Rectificación.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Texto</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>