force-app/main/default/objects/CC_Derecho__c/fields/CC_TipoLimitacion__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoLimitacion__c</fullName>
    <description>Propiedad del derecho de Limitación.</description>
    <label>Tipo de limitación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tipo 1 - subsidiario</fullName>
            </value>
            <value>
                <fullName>Tipo 2 - propio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>