force-app/main/default/objects/CC_Derecho__c/fields/CC_TipoPortabilidad__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoPortabilidad__c</fullName>
    <description>Propiedad del derecho de Portabilidad.</description>
    <label>Tipo de portabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Para uno mismo</fullName>
            </value>
            <value>
                <fullName>Para un tercero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>