force-app/main/default/objects/CC_Derecho__c/fields/CC_TipoVia__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoVia__c</fullName>
    <description>Tipo de vía de la dirección de envío del cliente.</description>
    <label>Tipo de vía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_TipoVia</valueSetName>
    </valueSet>
</CustomField>