force-app/main/default/objects/CC_Derecho__c/fields/CC_Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>CC_Tratamiento__c</fullName>
    <description>Campo utilizado para el tratamiento de los derechos.</description>
    <label>Tratamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segmentación de clientes</fullName>
            </value>
            <value>
                <fullName>Gestión del desempeño de empleados, agentes y proveedores</fullName>
            </value>
            <value>
                <fullName>Prevención del fraude</fullName>
            </value>
            <value>
                <fullName>Consulta y comunicación a sistemas de información crediticia en el marco de la solicitud y posterior gestión de productos que impliquen financiación</fullName>
            </value>
            <value>
                <fullName>Obtención de datos de contacto adicionales para la gestión de situaciones de impago</fullName>
            </value>
            <value>
                <fullName>Elaboración de informes estadísticos y modelos matemáticos</fullName>
            </value>
            <value>
                <fullName>Sanciones y contramedidas financieras internacionales</fullName>
            </value>
            <value>
                <fullName>Clasificación de clientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>