force-app/main/default/objects/CC_Derecho__c/fields/CC_UtilizarDatosMineria__c.field-meta.xml
<CustomField>
    <fullName>CC_UtilizarDatosMineria__c</fullName>
    <description>Propiedad del derecho de Revocación del consentimiento.</description>
    <inlineHelpText>Utilizar sus datos para:
- Efectuar estudios y seguimiento de la operativa
- Gestionar las alertas de los productos que tiene contratados
- Estudiar productos y servicios ajustados a su perfil del grupo CaixaBank</inlineHelpText>
    <label>Utilizar datos para minería de datos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacío</fullName>
                <default>true</default>
                <label>Vacío</label>
            </value>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>