force-app/main/default/objects/CC_Derecho__c/fields/CSBD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>startsWith</operation>
            <value>CSBD_</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Derechos GDPR</relationshipLabel>
    <relationshipName>CSBD_DerechosGpdrChildRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>