force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Acceso.recordType-meta.xml
<RecordType>
    <fullName>CC_Acceso</fullName>
    <active>true</active>
    <label>Acceso</label>
</RecordType>