force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Cancelacion.recordType-meta.xml
<RecordType>
    <fullName>CC_Cancelacion</fullName>
    <active>true</active>
    <label>Cancelación</label>
</RecordType>