force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_DerechoDecisionAutomatizada.recordType-meta.xml
<RecordType>
    <fullName>CC_DerechoDecisionAutomatizada</fullName>
    <active>true</active>
    <label>Derecho a no ser objeto de una decisión automatizada</label>
</RecordType>