force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Limitacion.recordType-meta.xml
<RecordType>
    <fullName>CC_Limitacion</fullName>
    <active>true</active>
    <label>Limitación</label>
</RecordType>