force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Oposicion.recordType-meta.xml
<RecordType>
    <fullName>CC_Oposicion</fullName>
    <active>true</active>
    <label>Oposición</label>
</RecordType>