force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Oposicion_comunicaciones_interes_legitimo.recordType-meta.xml
<RecordType>
    <fullName>CC_Oposicion_comunicaciones_interes_legitimo</fullName>
    <active>true</active>
    <label>Oposición comunicaciones interés legítimo</label>
</RecordType>