force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Portabilidad.recordType-meta.xml
<RecordType>
    <fullName>CC_Portabilidad</fullName>
    <active>true</active>
    <label>Portabilidad</label>
</RecordType>