force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Rectificacion.recordType-meta.xml
<RecordType>
    <fullName>CC_Rectificacion</fullName>
    <active>true</active>
    <label>Rectificación</label>
</RecordType>