force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_Revocacion_consentimiento_verificacion_actividad_economica_Seguridad_Social.recordType-meta.xml
<RecordType>
    <fullName>CC_Revocacion_consentimiento_verificacion_actividad_economica_Seguridad_Social</fullName>
    <active>true</active>
    <label>Revocación consentimiento verificación actividad económica Seguridad Social</label>
</RecordType>