force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_RevocacionCondicionesContratosCotitularida.recordType-meta.xml
<RecordType>
    <fullName>CC_RevocacionCondicionesContratosCotitularida</fullName>
    <active>true</active>
    <label>Revocación consentimiento aplicación condiciones personales ctos cotitularidad</label>
</RecordType>