force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_RevocacionConsentimiento.recordType-meta.xml
<RecordType>
    <fullName>CC_RevocacionConsentimiento</fullName>
    <active>true</active>
    <label>Revocación de consentimientos comerciales</label>
</RecordType>