force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_RevocacionConsentimientoBiometrico.recordType-meta.xml
<RecordType>
    <fullName>CC_RevocacionConsentimientoBiometrico</fullName>
    <active>true</active>
    <label>Revocación uso biometria</label>
</RecordType>