force-app/main/default/objects/CC_Derecho__c/recordTypes/CC_RevocacionConsentimientoProductosServicios.recordType-meta.xml
<RecordType>
    <fullName>CC_RevocacionConsentimientoProductosServicios</fullName>
    <active>true</active>
    <label>Revocación consentimiento productos y servicios de activo</label>
</RecordType>