force-app/main/default/objects/CC_Derecho__c/validationRules/CC_VerificacionDatos.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_VerificacionDatos</fullName>
    <active>true</active>
    <description>Valida que se haya marcado el check conforme se han verificado los datos del cliente.</description>
    <errorConditionFormula>CC_DatosClienteVerificados__c  &lt;&gt; true</errorConditionFormula>
    <errorMessage>Para poder enviar el formulario es requerido confirmar que se han verificado los datos del cliente.</errorMessage>
</ValidationRule>