force-app/main/default/objects/CC_Derecho__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_Estado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_FechaEnvioCierre__c</columns>
    <columns>CC_Cliente__c</columns>
    <columns>CC_DocumentoCliente__c</columns>
    <columns>CC_Caso__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>