force-app/main/default/objects/CC_Derecho__c/listViews/CSBD_Todos.listView-meta.xml
<ListView>
    <fullName>CSBD_Todos</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CSBD_Opportunity__c</columns>
    <columns>CC_Estado__c</columns>
    <columns>CC_FechaEnvioCierre__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CSBD_Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CSBD: Todos</label>
</ListView>