force-app/main/default/objects/CC_Derecho__c/listViews/Derechos_err_neos.listView-meta.xml
<ListView>
    <fullName>Derechos_err_neos</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_Caso__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_Estado__c</field>
        <operation>equals</operation>
        <value>Erróneo</value>
    </filters>
    <label>Derechos erróneos</label>
</ListView>